# laba_3_2sem

./: CMakeLists.txt
Lab_3/: тз
app_gui/: CMakeLists.txt
app_gui/include/: MainWindow.hpp  MatrixInputDialog.hpp  OperationDialog.hpp  PolynomialController.hpp  PolynomialWidget.hpp
app_gui/src/: MainWindow.cpp  MatrixInputDialog.cpp  OperationDialog.cpp  PolynomialController.cpp  PolynomialWidget.cpp  main.cpp
src/: Matrix.hpp  Matrix.tpp  Polynomial.hpp  Polynomial.tpp
tests/: CMakeLists.txt  test_matrix.cpp  test_polynomial.cpp  test_polynomial_matrix.cpp
